--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
 {
-"update_url": "https://clients2.google.com/service/update2/crx",
-
-  "name": "小窗口视频 Picture-in-Picture Extension",
-  "description": "原tampermonkey脚本——小窗口视频，的插件版；Watch video using Picture-in-Picture",
+  "name": "__MSG_appName__",
+  "description": "__MSG_appDescription__",
+  "default_locale": "zh_CN",
   "version": "0.1",
   "icons": {
     "128": "assets/icon128.png"
@@ -17,8 +16,8 @@
     }
   },
   "commands": {
-    "left": {
-      "description": "backward",
+    "backward": {
+      "description": "__MSG_backward__",
       "suggested_key": {
         "windows": "Ctrl+Left",
         "mac": "Command+Left",
@@ -26,8 +25,8 @@
         "linux": "Ctrl+Left"
       }
     },
-    "right": {
-      "description": "forward",
+    "forward": {
+      "description": "__MSG_forward__",
       "suggested_key": {
         "windows": "Ctrl+Right",
         "mac": "Command+Right",
@@ -35,22 +34,19 @@
         "linux": "Ctrl+Right"
       }
     },
-    "up": {
-      "description": "play pause/volume up",
-      "suggested_key": {
-        "windows": "Ctrl+Up",
-        "mac": "Command+Up",
-        "chromeos": "Ctrl+Up",
-        "linux": "Ctrl+Up"
-      }
+    "volumeUp": {
+      "description": "__MSG_volumeUp__"
     },
-    "down": {
-      "description": "play pause/volume down",
+    "volumeDown": {
+      "description": "__MSG_volumeDown__"
+    },
+    "play": {
+      "description": "__MSG_playPause__",
       "suggested_key": {
-        "windows": "Ctrl+Down",
-        "mac": "Command+Down",
-        "chromeos": "Ctrl+Down",
-        "linux": "Ctrl+Down"
+        "windows": "Ctrl+Space",
+        "mac": "Command+Space",
+        "chromeos": "Ctrl+Space",
+        "linux": "Ctrl+Space"
       }
     }
   },
